--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -1,5 +1,6 @@
 @article{zhongpropositions,
   title={Propositions Formalized in Chu Spaces},
+  year={2024},
   author={Zhong, Shengyang}
 }
 
@@ -10,6 +11,12 @@
   volume={53},
   number={4},
   pages={75},
-  year={2023},
+  year=2023,
   publisher={Springer}
+}
+
+@article{zhongpropositional,
+  title={Propositional Logic and Modal Logic-A Connection via Relational Semantics},
+  year=2022,
+  author={Zhong, Shengyang}
 }
