--- a/content/publication/zhongpropositions/cite.bib
+++ b/content/publication/zhongpropositions/cite.bib
@@ -1,5 +1,6 @@
 @article{zhongpropositions,
  author = {Zhong, Shengyang},
- title = {Propositions Formalized in Chu Spaces}
+ title = {Propositions Formalized in Chu Spaces},
+ year = {2024}
 }
 
